variables.RunHalf.scala.error
Compilation error:
RunHalf:1: error: not found: value varnbOrange
var nbBaggle = 0 ; varnbOrange = 0
                   ^RunHalf:2: error: not found: value nbOrange
while (2*nbBaggle != nbOrange +1) {
                     ^RunHalf:5: error: not found: value nbOrange
    nbOrange = nbOrange + 1
    ^